--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ body {
     display: flex;
     background-color: var(--netral3);
     border-radius: 10px;
-    height: 357px;
+    height: 368px;
 }
 
 /* IMAGEM */
@@ -78,6 +78,8 @@ body {
     margin: 10px 0 19px 0;
     color: var(--netral1);
     line-height: 30px;
+    font-size: 1.8em;
+    max-width: 12rem;
 }
 
 .cardBox__description p {
